--- a/SmelteryProject/Config/DefaultEngine.ini
+++ b/SmelteryProject/Config/DefaultEngine.ini
@@ -211,3 +211,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/PythonScriptPlugin.PythonScriptPluginSettings]
+bRemoteExecution=True
+
