Updated for Prototyping

--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{FB5C4866-44C1-1B1F-DBBA-4E9A1B30224F}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
