--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,7 +177,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game/untitled_category/untitled_asset
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -705,6 +705,7 @@ UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
+UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
 AndroidRuntimeSettings.App Bundles=True
 AndroidRuntimeSettings.Build=True
@@ -824,7 +825,6 @@ UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
 BlueprintEditorSettings.Experimental=True
-UMGEditorProjectSettings.Designer =True
 AssetManagerSettings.Asset Registry=True
 AudioSettings.Panning=True
 Engine.PerQualityLevelProperty=True
