Bo adding level

--- a/SmelteryProject/Saved/Config/WindowsEditor/Engine.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/Engine.ini
@@ -48,6 +48,8 @@ Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Animation/DeformerGraph/Content
 Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
+Paths=../../../Engine/Plugins/Runtime/Houdini Engine/Unreal/20.5.409/5.4/HoudiniEngine/Content
+Paths=../../../Engine/Plugins/Runtime/Houdini Engine/Unreal/20.5.409/5.3/HoudiniEngine/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
