Updated all Walls/Windows/Floor/DoorFrames to have correct origins and snapping + New Straight Window

--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{AF24ED5A-4CF8-F083-CC70-FE87DCCACE04}",
+	"EngineAssociation": "5.3",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
