Added chain varients for any additional decoration purposes

--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,10 +174,10 @@ CurrentPosGridSize=3
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/Maps/Assets
-MRUItem1=/Game/Maps/SmelteryLevel
-MRUItem2=/Game/Maps/Main_Level
-MRUItem3=/Game/Maps/Mikail
+MRUItem0=/Game/Maps/Mikail
+MRUItem1=/Game/Maps/Assets
+MRUItem2=/Game/Maps/SmelteryLevel
+MRUItem3=/Game/Maps/Main_Level
 MRUItem4=/Game/Maps/Beau_Level
 MRUItem5=/Game/Maps/WenYaoLevel
 MRUItem6=/Game/Maps/CallumLevel
@@ -186,7 +186,7 @@ MRUItem6=/Game/Maps/CallumLevel
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/untitled_category/untitled_asset
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
-ContentBrowserTab1.SelectedPaths=/Game/untitled_category/untitled_asset
+ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Decorative
 None=======
 None=======
 CurrentPosGridSize=0
@@ -238,14 +238,14 @@ LastLevel=/Game/Maps/Mikail
 LastLevel=/Game/Maps/Mikail
 LastLevel=/Game/Maps/Main_Level
 LastLevel=/Game/Maps/SmelteryLevel
-LastLevel=/Game/Maps/Assets
+LastLevel=/Game/Maps/SmelteryLevel
 None=======
 None=======
 None=======
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1094,10 +1094,10 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/Assets
-MRUItem1=/Game/Maps/Main_Level
-MRUItem2=/Game/Maps/SmelteryLevel
-MRUItem3=/Game/Maps/Mikail
+MRUItem0=/Game/Maps/Mikail
+MRUItem1=/Game/Maps/Assets
+MRUItem2=/Game/Maps/Main_Level
+MRUItem3=/Game/Maps/SmelteryLevel
 MRUItem4=/Game/Maps/Beau_Level
 MRUItem5=/Game/Maps/WenYaoLevel
 MRUItem6=/Game/Maps/CallumLevel
@@ -1504,7 +1504,7 @@ None=======
 ScreenPosition=X=320.000 Y=156.000
 ScreenPosition=X=322.000 Y=282.000
 WindowSize=X=1288.000 Y=728.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1290.000 Y=730.000
 None=======
 None=======
 GroomPluginSettings=True
@@ -1527,7 +1527,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 UNR=../../../../../../Users/ray2d/OneDrive/Documents/Unreal Projects/smeltry_project/Smeltery/SmelteryProject/Content/Maps
 UNR=../../../../../../Users/jdtay/OneDrive/Desktop/Github Repo's/Factory Project/Smeltery/SmelteryProject/Content/Maps
 UNR=../../../../../../Users/ray2d/OneDrive/Documents/Unreal Projects/smeltry_project/Smeltery/SmelteryProject/Content/Maps
-UNR=C:/Users/Callum Chandler/Documents/Uni-Games Production/Year3/Mod2-Adv3D/Assessment Work/Smeltery/SmelteryProject/Content/Maps
+UNR=../../../../../../Users/ray2d/OneDrive/Documents/Unreal Projects/smeltry_project/Smeltery/SmelteryProject/Content/Maps
 None=======
 None=======
 None=======
@@ -3730,8 +3730,8 @@ MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=B:/epic games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [DetailCustomWidgetExpansion]
