pulling before adjusting the chains

--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,7 +186,7 @@ MRUItem6=/Game/Maps/CallumLevel
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/untitled_category/untitled_asset
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
-ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Decorative
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 None=======
 None=======
 CurrentPosGridSize=0
@@ -238,14 +238,14 @@ LastLevel=/Game/Maps/Mikail
 LastLevel=/Game/Maps/Mikail
 LastLevel=/Game/Maps/Main_Level
 LastLevel=/Game/Maps/SmelteryLevel
-LastLevel=/Game/Maps/SmelteryLevel
+LastLevel=/Game/Maps/Mikail
 None=======
 None=======
 None=======
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1504,7 +1504,7 @@ None=======
 ScreenPosition=X=320.000 Y=156.000
 ScreenPosition=X=322.000 Y=282.000
 WindowSize=X=1288.000 Y=728.000
-WindowSize=X=1290.000 Y=730.000
+WindowSize=X=1292.000 Y=732.000
 None=======
 None=======
 GroomPluginSettings=True
