Added DoorFrame + Door

--- a/SmelteryProject/Config/DefaultEngine.ini
+++ b/SmelteryProject/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=SmelteryProject
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/SmelteryLevel.SmelteryLevel
-GameDefaultMap=/Game/Maps/SmelteryLevel.SmelteryLevel
+EditorStartupMap=/Game/Maps/Main_Level.Main_Level
+GameDefaultMap=/Game/Maps/Main_Level.Main_Level
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
