Added something, cant remember

--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -205,7 +205,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.748034894
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/FactoryKit/Machinery
+ContentBrowserDrawer.SelectedPaths=/Game/untitled_category/untitled_asset
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3940,6 +3940,12 @@ OptimusSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedIn
 GroomPluginSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 
 [PlacementMode]
+RecentlyPlaced=/Game/untitled_category/untitled_asset/FD-006_Main_Light_Blue_Wire.FD-006_Main_Light_Blue_Wire;
+RecentlyPlaced=/Game/untitled_category/untitled_asset/FD-006_Main_Light_Red_Wire.FD-006_Main_Light_Red_Wire;
+RecentlyPlaced=/Game/untitled_category/untitled_asset/FD-006_Main_Light_Base.FD-006_Main_Light_Base;
+RecentlyPlaced=/Game/untitled_category/untitled_asset/FM-005-PulleyStandFrame.FM-005-PulleyStandFrame;
+RecentlyPlaced=/Game/Assets/GroupedAssets/BP_PipeValve2.BP_PipeValve2;
+RecentlyPlaced=/Game/Assets/FactoryKit/Interior/FI-005-Walkway.FI-005-Walkway;
 RecentlyPlaced=/Game/untitled_category/untitled_asset/FD-006_Main_Light.FD-006_Main_Light;
 RecentlyPlaced=/Game/Assets/FactoryKit/Machinery/FM-001-ConveyerBelt.FM-001-ConveyerBelt;
 RecentlyPlaced=/Game/Assets/FactoryKit/Machinery/FM-004_Smelter.FM-004_Smelter;
@@ -3954,12 +3960,6 @@ RecentlyPlaced=/Game/Assets/FactoryKit/Decorative/FD-006-HangingLights.FD-006-Ha
 RecentlyPlaced=/Game/Assets/FactoryKit/Decorative/FD-008-Chair.FD-008-Chair;
 RecentlyPlaced=/Game/Assets/FactoryKit/Decorative/FD-002-Table.FD-002-Table;
 RecentlyPlaced=/Game/Assets/FactoryKit/Miscellanious/M-005-SignHanging.M-005-SignHanging;
-RecentlyPlaced=/Game/Assets/FactoryKit/Machinery/FM-006-IronCast.FM-006-IronCast;
-RecentlyPlaced=/Game/Assets/FactoryKit/Machinery/FM-002-MoldingMachine.FM-002-MoldingMachine;
-RecentlyPlaced=/Game/untitled_category/untitled_asset/FM-005-PulleyWheel.FM-005-PulleyWheel;
-RecentlyPlaced=/Game/Assets/FactoryKit/Rooms/FactoryFloorAssets/FI-033_Factory_Floor_Half_Arched_Window.FI-033_Factory_Floor_Half_Arched_Window;
-RecentlyPlaced=/Game/Assets/FactoryKit/Rooms/FactoryFloorAssets/FI-030_Factory_Floor_Arched_Window.FI-030_Factory_Floor_Arched_Window;
-RecentlyPlaced=/Game/Assets/FactoryKit/Rooms/FactoryFloorAssets/FI-029_Factory_Floor_Straight_Window.FI-029_Factory_Floor_Straight_Window;
 None=======
 None=======
 None=======
