--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,7 +188,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/untitled_category/untitled_asset
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
-ContentBrowserTab1.SelectedPaths=/Game/untitled_category/untitled_asset
+ContentBrowserTab1.SelectedPaths=
 None=======
 None=======
 None=======
@@ -250,7 +250,7 @@ None=======
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1529,7 +1529,7 @@ None=======
 ScreenPosition=X=320.000 Y=156.000
 ScreenPosition=X=322.000 Y=282.000
 WindowSize=X=1288.000 Y=728.000
-WindowSize=X=1312.000 Y=752.000
+WindowSize=X=1314.000 Y=754.000
 None=======
 None=======
 GroomPluginSettings=True
