Added Smeltery DoorFrame

--- a/SmelteryProject/Saved/Config/WindowsEditor/Engine.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/Engine.ini
@@ -50,6 +50,7 @@ Paths=../../../Engine/Plugins/Animation/DeformerGraph/Content
 Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
 Paths=../../../Engine/Plugins/Runtime/Houdini Engine/Unreal/20.5.409/5.4/HoudiniEngine/Content
 Paths=../../../Engine/Plugins/Runtime/Houdini Engine/Unreal/20.5.409/5.3/HoudiniEngine/Content
+Paths=../../../Engine/Plugins/Fab/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
