Close to finishing pulley and made a few pulley rail varients

--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -215,7 +215,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Rooms/SmartHallway
 ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Rooms/WorkShopAssets
-ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Interior
+ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit
 CurrentPosGridSize=0
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -275,6 +275,7 @@ None=======
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
@@ -575,21 +576,25 @@ PostProcessVolume.Replication=True
 PostProcessVolume.HLOD=True
 PostProcessVolume.Networking=True
 PostProcessVolume.Actor=True
+BP_PipeValve2_C.Tick=True
+BP_PipeValve2_C.WorldPartition=True
+BP_PipeValve2_C.Events=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/Assets
-MRUItem1=/Game/Assets/FactoryKit/Interior/CatwalkGrid
-MRUItem2=/Game/Assets/FactoryKit/Interior/FI-005_WalkwaysCorner
-MRUItem3=/Game/Assets/FactoryKit/Interior/CatwalkBase
-MRUItem4=/Game/LevelPrototyping/Materials/M_PrototypeGrid
-MRUItem5=/Game/Assets/FactoryKit/Rooms/SmelterAssets/FI-76_Smeltery_DoorFrame
-MRUItem6=/Game/Assets/FactoryKit/Interior/FI-005_Walkways
-MRUItem7=/Game/Maps/Mikail
-MRUItem8=/Game/Assets/FactoryKit/Rooms/FactoryFloorAssets/FI-034_Factory_Floor_Doorframe
-MRUItem9=/Game/Assets/FactoryKit/Rooms/ObservatoryAssets/FI-026-Observatory_DoorFrame
-MRUItem10=/Game/Assets/AssetContainer
-MRUItem11=/Game/Assets/FactoryKit/Rooms/CommunalHallway/FI-068_Communal_Hallway_Wide_DoorFrame
-MRUItem12=/Game/Assets/FactoryKit/Interior/FI-005-Walkway
+MRUItem0=/Game/Assets/GroupedAssets/BP_PipeValve2
+MRUItem1=/Game/Maps/Assets
+MRUItem2=/Game/Assets/FactoryKit/Interior/CatwalkGrid
+MRUItem3=/Game/Assets/FactoryKit/Interior/FI-005_WalkwaysCorner
+MRUItem4=/Game/Assets/FactoryKit/Interior/CatwalkBase
+MRUItem5=/Game/LevelPrototyping/Materials/M_PrototypeGrid
+MRUItem6=/Game/Assets/FactoryKit/Rooms/SmelterAssets/FI-76_Smeltery_DoorFrame
+MRUItem7=/Game/Assets/FactoryKit/Interior/FI-005_Walkways
+MRUItem8=/Game/Maps/Mikail
+MRUItem9=/Game/Assets/FactoryKit/Rooms/FactoryFloorAssets/FI-034_Factory_Floor_Doorframe
+MRUItem10=/Game/Assets/FactoryKit/Rooms/ObservatoryAssets/FI-026-Observatory_DoorFrame
+MRUItem11=/Game/Assets/AssetContainer
+MRUItem12=/Game/Assets/FactoryKit/Rooms/CommunalHallway/FI-068_Communal_Hallway_Wide_DoorFrame
+MRUItem13=/Game/Assets/FactoryKit/Interior/FI-005-Walkway
 
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[2]\" "
@@ -1022,12 +1027,12 @@ None=======
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
 ScreenPosition=X=322.000 Y=282.000
-ScreenPosition=X=26.000 Y=300.000
+ScreenPosition=X=26.000 Y=274.667
 WindowSize=X=1288.000 Y=728.000
 WindowSize=X=1316.000 Y=756.000
 WindowSize=X=1280.000 Y=720.000
 WindowSize=X=1318.000 Y=758.000
-WindowSize=X=1298.000 Y=738.000
+WindowSize=X=1300.000 Y=740.000
 None=======
 None=======
 None=======
@@ -5981,12 +5986,12 @@ Fab.LastCompileMethod=Unknown
 LastDirectory=
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=B:/epic games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
@@ -6228,6 +6233,7 @@ None=======
 /Game/Assets/Textures/Emission_001.Emission_001=1
 /Game/Assets/FactoryKit/Interior/CatwalkBase.CatwalkBase=1
 /Game/Assets/FactoryKit/Interior/FI-005_WalkwaysCorner.FI-005_WalkwaysCorner=1
+/Game/Assets/GroupedAssets/BP_PipeValve2.BP_PipeValve2=1
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
