Added Conveyers + Catwalk to scene

--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{EC12336D-413C-D4F7-04C0-7C83AD93B24C}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
