--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{762921D0-4102-C048-864E-D89200A52081}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
