Made Wall Light Mats

--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -225,7 +225,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
 ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Rooms/SmartHallway
 ContentBrowserTab1.SelectedPaths=/Game/Maps
 ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Rooms/WorkShopAssets
-ContentBrowserTab1.SelectedPaths=/Game/Assets/FactoryKit/Decorative
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Textures
 CurrentPosGridSize=0
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -327,6 +327,8 @@ None=======
 None=======
 
 [PluginBrowser]
+InstalledPlugins=Substance
+InstalledPlugins=HoudiniEngine
 InstalledPlugins=VisualStudioTools
 InstalledPlugins=WMFCodecs
 
@@ -1192,7 +1194,7 @@ None=======
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
 ScreenPosition=X=322.000 Y=282.000
-ScreenPosition=X=298.667 Y=134.667
+ScreenPosition=X=298.000 Y=134.000
 WindowSize=X=1288.000 Y=728.000
 WindowSize=X=1316.000 Y=756.000
 WindowSize=X=1280.000 Y=720.000
