--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{801EB562-4867-0F6D-8F3F-8CBA958E48A6}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
