--- a/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SmelteryProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -288,7 +288,7 @@ None=======
 None=======
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
@@ -6230,12 +6230,12 @@ LastDirectory=
 LastDirectory=
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=B:/epic games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 None=======
