Progress on plant

--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{6C66B297-4FF5-A697-E61E-92ACE4D92E04}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
