--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,10 +1,6 @@
 {
 	"FileVersion": 3,
-<<<<<<< HEAD
-	"EngineAssociation": "{14E3488F-473D-E3C8-82F3-71A36C63EB20}",
-=======
-	"EngineAssociation": "{6C66B297-4FF5-A697-E61E-92ACE4D92E04}",
->>>>>>> a39220cf2cb129371ea3858bf7f10614f8585654
+	"EngineAssociation": "5.3",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
