Added support beam textures

--- a/SmelteryProject/SmelteryProject.uproject
+++ b/SmelteryProject/SmelteryProject.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.3",
+	"EngineAssociation": "{CB84D5C0-48B7-4228-B6B0-F1AD63A3848A}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
